Criação do modelagem no mart

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -22,6 +22,10 @@ models:
       relation: true
       columns: true
 
-    stanging:
+    staging:
       +materialized: view
       +schema: stg
+
+    marts:
+      +materialized: table
+      +schema: marts
