--- a/models/staging/adventure_works/stg_adventure_works__product_subcategory.yml
+++ b/models/staging/adventure_works/stg_adventure_works__product_subcategory.yml
@@ -1,11 +1,15 @@
 models:
-  - name: stg_adventure_works_product_subcategory
-    description: Tabela com informações sobre as subcategorias de produtos
+  - name: stg_adventure_works__product_subcategory
+    description: Tabela com informações sobre as subcategorias de produtos.
     columns:
-      - name: product_sub_category_id,
-        description: Identificador de subcategoria de produto
+      - name: product_sub_category_uid
+        description: Identificador universal da subcategoria do produto.
+
+      - name: product_category_uid
+        description: Identificador universal da categoria do produto.
+
+      - name: product_sub_category_id
+        description: Identificador original de subcategoria de produto.
 
       - name: subcategory_name
-        description: nome da subcategoria do produto
-
-     
+        description: Nome da subcategoria do produto.
