Aplicação de testes

--- a/models/marts/dim_address.yml
+++ b/models/marts/dim_address.yml
@@ -4,6 +4,9 @@ models:
     columns:
       - name: address_uid
         description: Identificador do endereço.
+        data_tests:
+          - unique
+          - not_null
      
       - name: postal_code
         description: Código postal do endereço.
