--- a/models/staging/adventure_works/stg_adventure_works__person.yml
+++ b/models/staging/adventure_works/stg_adventure_works__person.yml
@@ -4,9 +4,15 @@ models:
     columns:
       - name: person_uid
         description: Identificador universal da pessoa.
+        data_tests:
+          - unique
+          - not_null
 
       - name: person_id
         description: Identificador original da pessoa.
+        data_tests:
+          - unique
+          - not_null
 
       - name: person_name
         description: Nome da pessoa individual.
