--- a/models/staging/adventure_works/stg_adventure_works__product.yml
+++ b/models/staging/adventure_works/stg_adventure_works__product.yml
@@ -4,6 +4,9 @@ models:
     columns:
       - name: product_uid
         description: Identificador universal do produto.
+        data_tests:
+          - unique
+          - not_null
 
       - name: product_sub_category_uid
         description: Identificador universal da sub catgeoria do produto.
@@ -13,6 +16,9 @@ models:
 
       - name: product_id
         description: Identificador original do produto.
+        data_tests:
+          - unique
+          - not_null
 
       - name: product_name
         description: Nome do produto.
