--- a/models/staging/adventure_works/stg_adventure_works__sales_order_detail.yml
+++ b/models/staging/adventure_works/stg_adventure_works__sales_order_detail.yml
@@ -4,6 +4,9 @@ models:
     columns:
       - name: sales_order_detail_uid
         description: Identificador universal do detalhe do pedido de venda.
+        data_tests:
+          - unique
+          - not_null
 
       - name: sales_order_uid
         description: Identificador universal do pedido de venda.
@@ -13,6 +16,9 @@ models:
 
       - name: sales_order_detail_id
         description: Identificador original do pedido de venda.
+        data_tests:
+          - unique
+          - not_null
 
       - name: order_quantity
         description: Quantidade de unidades do produto no pedido.
