--- a/models/marts/dim_customer.yml
+++ b/models/marts/dim_customer.yml
@@ -4,9 +4,15 @@ models:
     columns:
       - name: customer_uid
         description: Identificador universal do cliente.
+        data_tests:
+          - unique
+          - not_null
 
       - name: customer_id
         description: Identificador do cliente.
+        data_tests:
+          - unique
+          - not_null
 
       - name: customer_name
         description: Nome do cliente, caso for um cliente loja será o nome da loja.
