--- a/models/staging/adventure_works/stg_adventure_works__product_category.yml
+++ b/models/staging/adventure_works/stg_adventure_works__product_category.yml
@@ -4,9 +4,15 @@ models:
     columns:
       - name: product_category_uid
         description: Identificador universal da categoria do produto.
+        data_tests:
+          - unique
+          - not_null
 
       - name: product_category_id
         description: Identificador da categoria do produto.
+        data_tests:
+          - unique
+          - not_null
 
       - name: category_name
         description: Nome da categoria do produto.
